Cast to volatile to avoid warnings from -Wcast-qual

https://bugzilla.gnome.org/show_bug.cgi?id=457641